# aquila

./: .gitignore  Dockerfile  README.md  pyproject.toml  renovate.json  style.sh  wsgi.py
.github/workflows/: build.yaml  ci.yml  test.yaml
app/: __init__.py  blob_storage.py  endpoints.py  settings.py  utils.py
app/templates/: test.html
aquila/: __init__.py  _version.py  blob_storage.py  fetch_reward.py  metrics.py  polaris_request.py  reporting.py  settings.py  utils.py
aquila/endpoints/: healthz.py  metrics.py  rewards.py
aquila/templates/: base.html  default.html  default_error.html
tests/api/: conftest.py  test_endpoint.py
tests/unit/: test_before_app_actions.py  test_settings.py  test_template_loader.py
