[tool.poetry]
name = "aquila"
version = "0.0.0" # this is handled by poetry-dynamic-versioning leave as 0.0.0
description = ""
authors = ["Bink <bink@bink.bink>"]
readme = "README.md"
repository = "https://github.com/binkhq/aquila"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
requests = "^2.28.1"
azure-identity = "^1.10.0"
azure-storage-blob = "^12.13.0"
python-decouple = "^3.6"
sentry-sdk = {extras = ["flask"], version = "^1.8.0"}
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
xenon = "^0.9.0"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.1.2"
pylint-pytest = "^1.1.2"
types-requests = "^2.28.3"
ipython = "^8.4.0"
responses = "^0.21.0"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = '^((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)'

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
lines_between_types = 1

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pylint.MASTER]
load-plugins=[
    "pylint_pytest",
    "pylint.extensions.mccabe"
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
]
good-names=[
    "k",  # key
    "v",  # value
    "fn", # function 
    "ex", # exception 
    "dt", # datetime 
    "tz"  # timezone
]

[tool.coverage.run]
omit = [
    "aquila/endpoints/healthz.py",
    "aquila/reporting.py",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover"
]